<resources>
    <string name="app_name">Automated-donation-platform-android</string>
    <string-array name="categories">
        <item>Admin</item>
        <item>Donor</item>
        <item>Charity</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="support_a_girl_in_samburu_who_can_t_go_to_school_due_to_lack_of_sanitary_towels">Support a girl in samburu who can’t go to school due to lack of sanitary towels</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="your_amount">Your amount</string>
    <string name="confirm">Confirm</string>
    <string name="please_enter_the_amount_you_want_to_give">please enter the amount you want to give.</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="cvc">CVC</string>
    <string name="save">Save</string>
    <string name="this_year_sac_safeguarding_adolescent_and_child_health_project_focuses_on_addressing_issues_around_menstrual_hygiene_management_with_the_theme_improving_menstrual_health_management_among_teenage_girls">This year SAC (Safeguarding Adolescent and Child Health) project focuses on addressing issues around menstrual hygiene management, with the theme; Improving Menstrual Health Management Among Teenage Girls.</string>
    <string name="trust_deed">Trust Deed ..</string>
    <string name="inua_dada_foundation">Inua-dada Foundation</string>
    <string name="your_donations">Your Donations</string>
    <string name="jemimah">Jemimah</string>
    <string name="email">Email:</string>
    <string name="inua_dada_dada_org">inua.dada@dada.org</string>
    <string name="_020_0011029394">020-0011029394</string>
    <string name="phone">Phone:</string>
    <string name="update">Update</string>
</resources>