<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="5dp"
        android:layout_marginHorizontal="10dp"
        app:cardCornerRadius="10dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="17dp"
                android:id="@+id/organization_Name"
                android:textColor="@color/black"
                android:text="@string/inua_dada_foundation" />
            <TextView
                android:layout_width="wrap_content"
                android:id="@+id/organization_about"
                android:layout_height="wrap_content"
                android:layout_below="@id/organization_Name"
                android:textSize="18sp"
                android:layout_marginTop="10dp"
                android:textColor="@color/black"
                android:text="@string/this_year_sac_safeguarding_adolescent_and_child_health_project_focuses_on_addressing_issues_around_menstrual_hygiene_management_with_the_theme_improving_menstrual_health_management_among_teenage_girls"
                />

            <TextView
                android:id="@+id/organization_trustdeed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/organization_about"
                android:layout_marginTop="15dp"
                android:background="@android:drawable/editbox_background"
                android:drawableEnd="@drawable/ic_baseline_cloud_download_24"
                android:padding="5dp"
                android:text="@string/trust_deed"
                android:textSize="20sp"
                app:drawableStartCompat="@drawable/ic_baseline_picture_as_pdf_24" />

            <TextView
                android:id="@+id/reject"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/organization_trustdeed"

                android:layout_marginVertical="10dp"
                android:layout_marginTop="10dp"
              android:layout_toStartOf="@+id/accept"
                android:text="Reject"
android:layout_marginEnd="10dp"
                android:textStyle="bold"
                android:textColor="@color/yellow"
                android:textSize="15dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
              android:id="@+id/accept"
                android:text="Approve"
                android:textStyle="bold"
                android:layout_marginVertical="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="40dp"
                android:layout_below="@+id/organization_trustdeed"
                android:layout_alignParentEnd="true"
                android:textColor="@color/colorPrimary"
                />
        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</FrameLayout>